Restyle Newest Arrivals for Even Cards across all Screen Sizes

--- a/index.html
+++ b/index.html
@@ -208,15 +208,15 @@
                       alt="picture of a puppy"
                     />
                     <div>
-                    <h4 class="card-header bg-card-primary card-text-title">
-                      Tilly
-                    </h4>
-                  </div>
+                      <h4 class="card-header bg-card-primary card-text-title">
+                        Tilly
+                      </h4>
+                    </div>
                     <div class="card-body">
                       <p class="card-text">
                         Small in size, big on sass. Loves belly rubs, garden
                         zoomies, and judging your snack choices. Apply now—she’s
-                        watching.
+                        watching. A freind forever just in waiting. 
                       </p>
                       <p><em>Age:</em> 6 weeks</p>
 
@@ -238,15 +238,15 @@
                       alt="picture of a puppy"
                     />
                     <div>
-                    <h4 class="card-header bg-card-primary card-text-title">
-                      Frankie
-                    </h4>
-                  </div>
+                      <h4 class="card-header bg-card-primary card-text-title">
+                        Frankie
+                      </h4>
+                    </div>
                     <div class="card-body">
                       <p class="card-text">
-                        Snorts, snores, and steals hearts. A professional couch
-                        potato with elite cuddling skills. Must love naps and be
-                        food-motivated.
+                        Snorts and snores, stealing hearts effortlessly. A
+                        professional couch potato with top cuddling skills,
+                        loving naps and motivated always by food and affection.
                       </p>
                       <p><em>Age:</em> 8 weeks</p>
                       <div class="text-end">
@@ -267,14 +267,15 @@
                       alt="picture of a puppy"
                     />
                     <div>
-                    <h4 class="card-header bg-card-primary card-text-title">
-                      Sunny
-                    </h4>
-                  </div>
+                      <h4 class="card-header bg-card-primary card-text-title">
+                        Sunny
+                      </h4>
+                    </div>
                     <div class="card-body">
                       <p class="card-text">
-                        Golden by name, golden by nature. Loyal, goofy, and
-                        always up for a game of fetch—or five. Bring snacks.
+                        Golden in name and nature—loyal, goofy, and playful.
+                        Always ready for fetch, or five rounds. Snacks and tasty
+                        treats are a must for lots of fun! Bundle of Joy!
                       </p>
                       <p><em>Age:</em> 6 weeks</p>
                       <div class="text-end">
@@ -295,15 +296,15 @@
                       alt="picture of a puppy"
                     />
                     <div>
-                    <h4 class="card-header bg-card-primary card-text-title">
-                      Rocco
-                    </h4>
-                  </div>
+                      <h4 class="card-header bg-card-primary card-text-title">
+                        Rocco
+                      </h4>
+                    </div>
                     <div class="card-body">
                       <p class="card-text">
-                        Wiggles like a worm, plays like a champ. Loves humans,
-                        hates boredom. Will box your heart into submission.
-                        Gloves optional.
+                        Wiggles like a worm and plays like a champ. Loves
+                        people, despises boredom, and will win your heart
+                        effortlessly. No gloves needed for this champion.
                       </p>
                       <p><em>Age:</em> 5 weeks</p>
                       <div class="text-end">
@@ -341,7 +342,7 @@
                 <div class="card dog-card shadow m-auto my-3">
                   <img
                     src="assets/images/smaller-dog-1.webp"
-                    class="card-img-top"
+                    class="card-img-top dog-image-height"
                     alt="picture of a puppy"
                   />
                   <div>
@@ -352,7 +353,8 @@
                   <div class="card-body">
                     <p class="card-text">
                       Built like a loaf, runs like a rocket. Royal attitude,
-                      wiggly bum, and ears that hear snack bags from space.
+                      wiggly bum, and ears that hear snack bags from space. A
+                      dog fit for royalty.
                     </p>
                     <p><em>Age:</em> 3 years old</p>
                     <div class="text-end">
@@ -369,7 +371,7 @@
                 <div class="card dog-card shadow m-auto my-3">
                   <img
                     src="assets/images/smaller-dog-2.webp"
-                    class="card-img-top"
+                    class="card-img-top dog-image-height"
                     alt="picture of a puppy"
                   />
                   <div>
@@ -398,7 +400,7 @@
                 <div class="card dog-card shadow m-auto my-3">
                   <img
                     src="assets/images/smaller-dog-3.webp"
-                    class="card-img-top"
+                    class="card-img-top dog-image-height"
                     alt="picture of a puppy"
                   />
                   <div>
@@ -427,7 +429,7 @@
                 <div class="card dog-card shadow m-auto my-3">
                   <img
                     src="assets/images/smaller-dog-4.webp"
-                    class="card-img-top"
+                    class="card-img-top dog-image-height"
                     alt="picture of a puppy"
                   />
                   <div>
@@ -439,7 +441,7 @@
                     <p class="card-text">
                       Serious face, silly soul. Loves digging, sniffing, and
                       stealing socks. Blonde by nature, bossy by choice. Terrier
-                      vibes, heart of gold.
+                      vibes, a pure loving heart of gold.
                     </p>
                     <p><em>Age:</em> 8 years old</p>
                     <div class="text-end">
@@ -542,7 +544,8 @@
                   <div class="card-body">
                     <p class="card-text">
                       Bouncy, boxy, and built for fun. Wiggles like a noodle,
-                      snores like a bear. Will love you very enthusiastically.
+                      snores like a bear. He has a lot of love he wants to share
+                      very enthusiastically.
                     </p>
                     <p><em>Age:</em> 5 years old</p>
                     <div class="text-end">
