Restyled Smaller Dogs Section for Even Cards Across All Screen Sizes

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                       <p class="card-text">
                         Small in size, big on sass. Loves belly rubs, garden
                         zoomies, and judging your snack choices. Apply now—she’s
-                        watching. A freind forever just in waiting. 
+                        watching. A freind forever just in waiting.
                       </p>
                       <p><em>Age:</em> 6 weeks</p>
 
@@ -352,9 +352,9 @@
                   </div>
                   <div class="card-body">
                     <p class="card-text">
-                      Built like a loaf, runs like a rocket. Royal attitude,
-                      wiggly bum, and ears that hear snack bags from space. A
-                      dog fit for royalty.
+                      Built like a loaf but runs like a rocket, with a royal
+                      attitude, wiggly bum, and ears that detect snack bags from
+                      way outer space—a true royal dog.
                     </p>
                     <p><em>Age:</em> 3 years old</p>
                     <div class="text-end">
@@ -381,9 +381,9 @@
                   </div>
                   <div class="card-body">
                     <p class="card-text">
-                      Part runway model, part shadow. Loves brushing, drama, and
-                      being the star. Floofy, fabulous, and not afraid to bark
-                      orders.
+                      Part runway model, part shadow, loves brushing, drama, and
+                      being the star. Floofy, fabulous, confident, and unafraid
+                      to bark orders like a true diva.
                     </p>
                     <p><em>Age:</em> 7 years old</p>
                     <div class="text-end">
@@ -410,9 +410,9 @@
                   </div>
                   <div class="card-body">
                     <p class="card-text">
-                      Low-maintenance coat, high-maintenance sass. Compact
-                      cuddle unit with speed, style, and opinions. Will accept
-                      treats as tribute for affection.
+                      Low-maintenance coat but high-maintenance sass. A compact
+                      cuddle machine with speed, style, and strong opinions.
+                      Always ready to trade affection for tasty treats.
                     </p>
                     <p><em>Age:</em> 2 years old</p>
                     <div class="text-end">
@@ -439,9 +439,9 @@
                   </div>
                   <div class="card-body">
                     <p class="card-text">
-                      Serious face, silly soul. Loves digging, sniffing, and
-                      stealing socks. Blonde by nature, bossy by choice. Terrier
-                      vibes, a pure loving heart of gold.
+                      Serious face with a silly soul. Loves digging, sniffing,
+                      stealing socks. Naturally blonde, bossy by choice, full of
+                      terrier energy and a pure, loyal heart of gold.
                     </p>
                     <p><em>Age:</em> 8 years old</p>
                     <div class="text-end">
