Restyle Older Dogs Section to make Card Even across All Screen Sizes

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                 <div class="card dog-card shadow m-auto my-3">
                   <img
                     src="assets/images/bigger-dog-1.webp"
-                    class="card-img-top"
+                    class="card-img-top dog-image-height"
                     alt="picture of a puppy"
                   />
                   <div>
@@ -504,7 +504,7 @@
                 <div class="card dog-card shadow m-auto my-3">
                   <img
                     src="assets/images/bigger-dog-2.webp"
-                    class="card-img-top"
+                    class="card-img-top dog-image-height"
                     alt="picture of a puppy"
                   />
                   <div>
@@ -533,7 +533,7 @@
                 <div class="card dog-card shadow m-auto my-3">
                   <img
                     src="assets/images/bigger-dog-3.webp"
-                    class="card-img-top"
+                    class="card-img-top dog-image-height"
                     alt="picture of a puppy"
                   />
                   <div>
@@ -545,7 +545,7 @@
                     <p class="card-text">
                       Bouncy, boxy, and built for fun. Wiggles like a noodle,
                       snores like a bear. He has a lot of love he wants to share
-                      very enthusiastically.
+                      with you. Always happy to see you.
                     </p>
                     <p><em>Age:</em> 5 years old</p>
                     <div class="text-end">
@@ -562,7 +562,7 @@
                 <div class="card dog-card shadow m-auto my-3">
                   <img
                     src="assets/images/bigger-dog-4.webp"
-                    class="card-img-top"
+                    class="card-img-top dog-image-height"
                     alt="picture of a puppy"
                   />
                   <div>
@@ -574,7 +574,7 @@
                     <p class="card-text">
                       Sunshine in dog form. Loyal, licky, and always carrying
                       something—usually a stick, sometimes your shoe. Just wants
-                      to love you.
+                      to love you. Loyal friend for life.
                     </p>
                     <p><em>Age:</em> 8 years old</p>
                     <div class="text-end">
