--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             />
             <div class="col-12 col-xl-4 container">
               <div id="spacer-top" class="row">
-                <div classs="col-12">
+                <div class="col-12">
                   <h2
                     class="display-6 text-center bg-color-primary p-4 mt-3 shadow"
                   >
@@ -1007,7 +1007,12 @@
               <label for="message" class="form-label"
                 >Want to share anything with us?</label
               >
-              <input type="text-area" class="form-control" id="message" />
+              <textarea
+                class="form-control"
+                id="message"
+                name="message"
+                rows="4"
+              ></textarea>
             </div>
             <div class="col-12 text-end">
               <button
@@ -1072,8 +1077,6 @@
         <div id="location" class="row">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6528.009491748167!2d-1.5467365000330668!3d52.10891367708431!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48772cbdd4f7f721%3A0x36ee47e81bd2c51d!2sOxhill%2C%20Warwick!5e1!3m2!1sen!2suk!4v1750707357195!5m2!1sen!2suk"
-            width="100%"
-            height="450"
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
