--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       sizes="16x16"
       href="assets/favicons/favicon-16x16.png"
     />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="assets/favicons/site.webmanifest" />
     <!-- Bootstrap Link -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
