Add 'contact' anchor to navbar

--- a/index.html
+++ b/index.html
@@ -65,18 +65,22 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="#our-dogs">Our Pack</a>
+              <a class="nav-link active" href="#our-dogs">Dogs</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#success-stories"
-                >Success Stories</a
+                >Testimonies</a
               >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#get-in-touch">Contact</a>
             </li>
             <li class="nav-item">
               <a class="btn custom-button-filled" href="#adoption-process"
                 >Adopt Now!</a
               >
             </li>
+            
           </ul>
         </div>
       </div>
@@ -1028,7 +1032,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="container-fluid">
+    <footer id="get-in-touch" class="container-fluid">
       <div class="container">
         <!-- Title -->
         <div class="row justify-content-center">
