Code Line Exclusion Message

--- a/index.html
+++ b/index.html
@@ -1163,6 +1163,7 @@
       src="https://kit.fontawesome.com/818fed39bf.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Code Lines 1167-1192 not written by myself -->
     <!-- JavaScript code to ensure the Bootstrap mobile navbar collapses when navigating to in-page links -->
     <script>
       document
